Additions, corrections, upgrades and deletions from endpoints, to how to manage the metics globally